# monorepo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  monorepo.code-workspace  pyproject.toml
.claude/: settings.json
.github/actions/get-diff/: action.yml
.github/scripts/: dependency_map.py  run-compliance.sh  run-infra.sh  selective_ci.py  test_selective_ci.py
.github/workflows/: ci.yml  frontend.yml  infra.yml  test-env.yml  web.yml  worker.yml
apps/frontend/: .env.example  AGENTS.md  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/transcription-extension-chrome/: .pre-commit-config.yaml  PRIVACY.md  PUBLISHING.md  README.md  STORE_LISTING.md  background.js  content-google-meet.js  manifest.json  meetings.html  meetings.js  mic-test.html  mic-test.js  offscreen.html  offscreen.js  package.sh  popup.html  popup.js
apps/web/: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  dev.py  entrypoint.py  openapi.json  patch_example.py  pyproject.toml
apps/web/.claude/: settings.json
apps/web/k8s/: deployment.yml
apps/web/tests/: conftest.py  test_cors.py  test_db.py  test_exception_handlers.py  test_main.py  test_project_web.py  test_settings.py  test_shared_auth.py  test_shared_dependencies.py  test_shared_logging.py
apps/web/tests/auth/: test_auth.py
apps/web/tests/clients/: test_clients.py
apps/web/tests/customers/: test_customers.py
apps/web/tests/sessions/: test_sessions.py  test_sessions_service.py
apps/web/web/: app.py  db.py  main.py  models.py  redis_client.py  routes.py  settings.py
apps/web/web/_shared/: __init__.py  auth  logging
apps/web/web/auth/: controller.py  model.py  oauth.py  service.py
apps/web/web/clients/: controller.py  model.py  service.py
apps/web/web/customers/: controller.py  model.py  service.py
apps/web/web/middleware/: auth.py
apps/web/web/migrations/: alembic.ini  env.py
apps/web/web/migrations/versions/: 5db499581461_transcript_entry_status_enum.py  a3f5c8d2e1b9_add_clients_sessions_transcript_entries.py  a453f7f3f52c_add_therapist_id_to_customers.py  b7c2e4f1a8d3_rename_clients_to_customers.py  ecbc01d943a4_create_users_table.py
apps/web/web/sessions/: controller.py  model.py  service.py
apps/worker/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.py  pyproject.toml
apps/worker/ci/: run-project-tests.sh  run-tests.sh
apps/worker/k8s/: deployment.yml
apps/worker/tests/: test_main.py  test_project_worker.py  test_settings.py  test_shared_auth.py  test_shared_dependencies.py  test_shared_logging.py
apps/worker/worker/: main.py  settings.py
apps/worker/worker/_shared/: __init__.py
ci/: dependency_map.py  run-compliance.sh  run-infra.sh
docker/: base.Dockerfile
docs/: backend-implementation-plan.md  backend-structure.md  frontend-structure.md  infra-spec.md  integracao-front-back.md
docs/transcription-extension-chrome/: summary.md
infra/: Makefile  main.tf  secrets.txt.enc  variables.tf
infra/cloud-init/: server.yaml
infra/k8s/: ingress.yml  postgres.yml  redis.yml  traefik-config.yml
infra/terraform/: .env.example  Makefile  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
local/initdb/: init.sql
sandbox/: Dockerfile  docker-compose.yml  run
scripts/: selective_ci.py
shared/auth/: pyproject.toml
shared/auth/src/company_shared/auth/: __init__.py  tokens.py
shared/auth/tests/: test_tokens.py
shared/logging/: pyproject.toml
shared/logging/shared_logging/: __init__.py  formatters.py
shared/logging/tests/: test_formatters.py
(+88 files in other folders)
