[project]
name = "monorepo-worker"
version = "0.1.0"
description = "Background worker"
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.5.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
    "pytest>=8.4.0",
    "ruff>=0.15.9",
]

[tool.taskipy.tasks]
test = "python -m pytest tests/"
test-project = "python -m pytest tests/test_project_worker.py"
