[project]
name = "monorepo-shared-logging"
version = "0.1.0"
description = "Shared logging helpers for internal consumers"
requires-python = ">=3.14"
dependencies = [
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["logging"]
